Add hmtl content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 </head>
 <body>
     <div class="container-card">
-        
+        <span class="tag">Learning</span>
+
+        <h3>Published 21 Dev 2023</h3>
+        <h2>HTML & CSS foundations</h2>
+
+        <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+
+        <span class="creator-name">Greg Hooper</span>
     </div>
 </body>
 </html>
