Add tags to content

--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
 </head>
 <body>
 
-  Learning
+  <span class="tag">Learning</span>
 
-  Published 21 Dec 2023
+  <h3>Published 21 Dec 2023</h3>
 
-  HTML & CSS foundations
+  <h2>HTML & CSS foundations</h2>
 
-  These languages are the backbone of every website, defining structure, content, and presentation.
 
-  Greg Hooper
+  <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+
+  <img src="/assets/images/image-avatar.webp" alt="Profile avatar">
+  <span>Greg Hooper</span>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
