--- a/index.html
+++ b/index.html
@@ -4,33 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Blog preview card</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+    
+    <title>Frontend Mentor | Blog preview card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+        .attribution { font-size: 11px; text-align: center; }
+        .attribution a { color: hsl(228, 45%, 44%); }
+    </style>
 </head>
 <body>
 
-  <span class="tag">Learning</span>
+    <span class="tag">Learning</span>
 
-  <h3>Published 21 Dec 2023</h3>
+    <h3>Published 21 Dec 2023</h3>
 
-  <h2>HTML & CSS foundations</h2>
+    <h2>HTML & CSS foundations</h2>
 
 
-  <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+    <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
-  <img src="/assets/images/image-avatar.webp" alt="Profile avatar">
-  <span>Greg Hooper</span>
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <img src="/assets/images/image-avatar.webp" alt="Profile avatar">
+    <span>Greg Hooper</span>
+    
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Muze1</a>.
+    </div>
 </body>
 </html>
