--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
 </head>
 <body>
 
-    <span class="tag">Learning</span>
+    <div class="container-card">
+        <span class="tag">Learning</span>
 
-    <h3>Published 21 Dec 2023</h3>
+        <h3>Published 21 Dec 2023</h3>
 
-    <h2>HTML & CSS foundations</h2>
+        <h2>HTML & CSS foundations</h2>
 
 
-    <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+        <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
-    <img src="/assets/images/image-avatar.webp" alt="Profile avatar">
-    <span>Greg Hooper</span>
+        <img src="/assets/images/image-avatar.webp" alt="Profile avatar">
+        <span>Greg Hooper</span>
+    </div>
     
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
