Add img and adjust styles for card

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 
     <div class="container-card">
+        <img src="/assets/images/illustration-article.svg" alt="Illustration">
         <span class="tag">Learning</span>
 
         <h3>Published 21 Dec 2023</h3>
@@ -24,7 +25,7 @@
         <img src="/assets/images/image-avatar.webp" alt="Profile avatar">
         <span>Greg Hooper</span>
     </div>
-    
+
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
         Coded by <a href="#">Muze1</a>.
