Add styles for items in card

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="container-card">
-        <img src="/assets/images/illustration-article.svg" alt="Illustration">
+        <img class="illustration" src="/assets/images/illustration-article.svg" alt="Illustration">
         <span class="tag">Learning</span>
 
         <h3>Published 21 Dec 2023</h3>
@@ -22,8 +22,10 @@
 
         <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
-        <img src="/assets/images/image-avatar.webp" alt="Profile avatar">
-        <span>Greg Hooper</span>
+        <div class="author-info">
+            <img class="profile-avatar" src="/assets/images/image-avatar.webp" alt="Profile avatar">
+            <span class="name-author">Greg Hooper</span>
+        </div>
     </div>
 
     <div class="attribution">
