Add class to p tags

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <img class="illustration" src="/assets/images/illustration-article.svg" alt="Illustration">
         <span class="tag">Learning</span>
 
-        <h3>Published 21 Dec 2023</h3>
+        <p class="date">Published 21 Dec 2023</p>
 
         <h2>HTML & CSS foundations</h2>
 
 
-        <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+        <p class="text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
         <div class="author-info">
             <img class="profile-avatar" src="/assets/images/image-avatar.webp" alt="Profile avatar">
