--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="container-card">
         <img class="illustration" src="/assets/images/illustration-article.svg" alt="Illustration">
-        <span class="tag">Learning</span>
+        <span class="small-bold-text">Learning</span>
 
         <p class="date">Published 21 Dec 2023</p>
 
@@ -24,7 +24,7 @@
 
         <div class="author-info">
             <img class="profile-avatar" src="/assets/images/image-avatar.webp" alt="Profile avatar">
-            <span class="name-author">Greg Hooper</span>
+            <span class="small-bold-text">Greg Hooper</span>
         </div>
     </div>
 
