Adjust class for span tags

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="author-info">
             <img class="profile-avatar" src="/assets/images/image-avatar.webp" alt="Profile avatar">
-            <span class="small-bold-text">Greg Hooper</span>
+            <span class="author-name">Greg Hooper</span>
         </div>
     </div>
 
